# fsrs4anki

./: .all-contributorsrc  .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  README2.md  benchmark.ipynb  benchmark_tscv.ipynb  fsrs4anki_optimizer.ipynb  fsrs4anki_optimizer_test.ipynb  fsrs4anki_scheduler.js  fsrs4anki_scheduler_DEPRECATED.js  fsrs4anki_scheduler_qt5.js  fsrs4anki_simulator.ipynb  main.js  requirements.txt
.github/: FUNDING.yml
candidate/: R-Matrix.ipynb  S0_curve_fit.ipynb  adaptive_grade_difficulty.ipynb  baseline-3.26.1.ipynb  easy-hard-bonus.ipynb  easy-hard-factor.ipynb  filter-out-overdue-reviews.ipynb  fsrs4anki_optimizer_beta.ipynb  grade-derived_R.ipynb  hybrid_forgetting_curve.ipynb  post-lapse_stability_offset.ipynb  power_difficulty.ipynb  power_forgetting_curve.ipynb
cmd_optimizer/: fsrs4anki_optimizer.py  fsrs4anki_optimizer_cmd.py  fsrs_optimizer.py
docs/: tutorial.md  tutorial2.md
experiment/: RNN.ipynb  baseline.ipynb  fsrs4anki_optimizer_alpha.ipynb  fsrs4anki_optimizer_alpha_parametrized-curve.ipynb  mini-batch.ipynb  mini-batch_R-Matrix.ipynb  mini-batch_S0_ curve_fit.ipynb  mini-batch_S0_curve_fit.ipynb  mini-batch_adaptive-grade.ipynb  mini-batch_exp-difficulty.ipynb  mini-batch_filter-data.ipynb  mini-batch_initial-stability.ipynb  mini-batch_initial-stability_LOF.ipynb  mini-batch_not-pretrain.ipynb  mini-batch_parametrized-curve.ipynb  mini-batch_pls.ipynb  (+4 more)
package/: Makefile  pyproject.toml  requirements.txt  setup.py
package/fsrs4anki_optimizer/: __main__.py  fsrs4anki_optimizer.py
pip/: Makefile  setup.py  (+1 more)
(+47 files in other folders)
